# operate-kit

./: .gitignore  CONTEXT.md  LICENSE  README.md  importlinter.ini  pyproject.toml
docs/: agent-ready-boundary.md  android-windows-plugins.md  architecture.md  usage-guide-zh.md  usage-guide.md
docs/feature-spec/: runtime-hooks-feature-spec.md
examples/: agent_tool_registry.py  android_flow.py  cross_surface_flow_spec.py  runtime_hooks.py  screen_object.py  trace_and_observation.py  windows_flow.py
src/mobile_agent/: __init__.py
src/mobile_agent/sdk/: __init__.py
src/operatekit/: __init__.py
src/operatekit/agent/: __init__.py  tool_registry.py
src/operatekit/cli/: main.py
src/operatekit/core/observation/: observation.py  patterns.py  snapshot.py
src/operatekit/core/policy/: risk.py
src/operatekit/core/shared/: errors.py  ids.py  time.py
src/operatekit/core/ui/: locator.py
src/operatekit/core/workflow/: run.py  step.py  value_objects.py
src/operatekit/plugins/android/: adbutils_host.py  proxy_controller.py  (+1 more)
src/operatekit/ports/: cache.py  decision_provider.py  host_driver.py  notifier.py  observation_port.py  run_ledger.py  surface_driver.py
src/operatekit/rpa/: actions.py  blockers.py  flow_compiler.py  flow_spec.py  screen_object.py  waits.py
src/operatekit/runtime/: context.py  hooks.py  ledger.py  notifier.py  runner.py  sdk.py  tracing.py
tests/: test_agent_boundary.py  test_create_factories.py  test_locator.py  test_observation_repository.py  test_retry_block.py  test_runtime_hooks.py  test_screen_object.py  test_workflow_runner.py
(+6 files in other folders)
