[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operatekit"
version = "0.4.0"
description = "RPA-first cross-surface automation runtime SDK for Android and Windows, agent-ready by design."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OperateKit Contributors"}]
dependencies = []

[project.optional-dependencies]
android = ["adbutils>=2.0.0", "uiautomator2>=3.0.0"]
windows = ["pywinauto>=0.6.8", "pywin32>=306", "comtypes>=1.2.0"]
capture = ["mitmproxy>=10.0.0"]
test = ["pytest>=8.0.0"]
all = ["adbutils>=2.0.0", "uiautomator2>=3.0.0", "pywinauto>=0.6.8", "pywin32>=306", "comtypes>=1.2.0", "mitmproxy>=10.0.0"]

[project.scripts]
opkit = "operatekit.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
